# antigravity-self-learning

./: .gitignore  README.md  astro.config.mjs  backup_docs.ps1  build_utf8.txt  claude-code-course-notes.md  find_docs.ps1  inject.py  package-lock.json  package.json  parser.py  pyproject.toml
.antigravity/: graph.db
.github/workflows/: deploy.yml
benchmarks/: latency_mitata.mjs  mcp_server_mock.py  ragas_native_eval.mjs  swe_bench_eval.mjs
browser_recordings/0b1cf04d-e2d8-48c1-a5f0-8bf05cec765a/: metadata.json
browser_recordings/1acbe26f-535b-4df1-9ee4-b17407c6b8bb/: metadata.json
browser_recordings/63b27887-807f-4d23-b90f-d59f71bff106/: metadata.json
browser_recordings/f346f8ea-25d9-4b6d-9ecd-a0aa2a87bc87/: metadata.json
daemon/: ls_36b599ff949f6e20.json  ls_4f6ef7e30d2d9696.json  ls_b7916507c2bf2bb1.json  ls_b8b6a37873ec4802.json  ls_c2c4052cdc8ea0a2.json  ls_e3b0c44298fc1c14.json
examples/: gemini-rules.md  workflow-hooks.md
global_workflows/: README.md  affiliate.md  audit.md  bip.md  code.md  debug.md  deploy.md  dream.md  help.md  init.md  money-hunter.md  plan.md  refactor.md  review.md  run.md  test.md
memory/: MEMORY.md  ai_voice_humanization.md  architecture_serverless_youtube.md  dream_log.md  feedback_zero_trust.md  no_toxic_trading_content.md  port_registry.md  reference_dev_resources.md  reference_knowledge_architecture.md  user_tools_env.md  vieneu_deep_dive.md  vite_prompt_trap.md
scripts/: dream.mjs  inject_proof.js  sync-brain.mjs
skills/adr-decisions/: SKILL.md
tests/: test_cli_brain.py  test_graph.py  test_parser.py
(+143 files in other folders)
