[project]
name = "antigravity-learn"
version = "2.0.0"
description = "Self-learning system for AI coding assistants — 44+ patterns from 14+ real projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Phạm Phú Nguyễn Hưng", email = "hungphamphunguyen@gmail.com"},
]
keywords = ["ai", "coding-assistant", "self-learning", "antigravity", "skills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.0.0",
    "mcp>=0.1.0",
    "pytest>=8.0.0",
]

[project.scripts]
antigravity-learn = "antigravity_learn.cli:app"

[project.urls]
Homepage = "https://github.com/hungpixi/antigravity-self-learning"
Repository = "https://github.com/hungpixi/antigravity-self-learning"
Issues = "https://github.com/hungpixi/antigravity-self-learning/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antigravity_learn"]
